# alternative-toolbar

./: .gitignore  0.16.3.tar.gz.asc  ChangeLog  DISTRO_PACKAGING  GENERAL  Makefile  Makefile.am  README.md  TRANSLATE_README  alternative-toolbar.plugin  alternative-toolbar.plugin.in  alternative-toolbar.py  alternative-toolbar.py.backup  alttoolbar.plugin  alttoolbar.py  alttoolbar_controller.py  alttoolbar_plugins.py  alttoolbar_preferences.py  alttoolbar_rb3compat.py  alttoolbar_repeat.py  alttoolbar_sidebar.py  alttoolbar_type.py  alttoolbar_widget.py  autogen.sh  configure.ac  debian_cleanup.sh  install.sh  nohup.out  readme.html  v0.15.0.tar.gz.asc  v0.17.1.tar.gz.asc  v0.17.2.tar.gz.asc  v0.17.3.tar.gz.asc  v0.17.4.tar.gz.asc  v0.17.5.tar.gz.asc  v0.18.0.tar.gz.asc  v0.18.1.tar.gz.asc  v0.18.2.tar.gz.asc  v0.18.3.tar.gz.asc  v0.18.4.tar.gz.asc
debian/: changelog  control  control.in  copyright  files  postinst  prerm  rules  watch
debian/patches/: 0001-No-longer-explicitly-hide-the-Import-button-Closes-1.patch  metainfo-license.patch  modify-makefile.diff  remove-license.diff  series
debian/source/: include-binaries
debian/upstream/: metadata  signing-key.asc
gentoo/x11-plugins/alternative-toolbar/: alternative-toolbar-9999.ebuild
m4/: python-gi.m4
metainfo/: .metainfo.xml  org.gnome.Rhythmbox.Plugin.AlternativeToolbar.appdata.xml  org.gnome.rhythmbox.alternative-toolbar.addon.appdata.xml  org.gnome.rhythmbox.rhythmbox-alternative-toolbar.addon.appdata.xml
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  alternative-toolbar.pot  am.po  ar.po  ast.po  bg.po  bn.po  bs.po  ca.po  ckb.po  create_all_po.sh  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  eu.po  fa.po  fi.po  files_to_be_translated  fr.po  gl.po  he.po  hr.po  hu.po  id.po  install_all.sh  it.po  ja.po  kab.po  ko.po  (+28 more)
po/po/: am.po  ast.po  be.po  bg.po  bn.po  bo.po  bs.po  ca.po  ckb.po  cy.po  da.po  el.po  en_CA.po  eo.po  et.po  eu.po  fa.po  he.po  hr.po  ja.po  kab.po  ku.po  lv.po  mnw.po  ms.po  nl.po  pt_BR.po  ro.po  ru.po  sd.po  se.po  shn.po  sk.po  sl.po  sq.po  sr@latin.po  sv.po  szl.po  ta.po  te.po  (+4 more)
schema/: org.gnome.rhythmbox.plugins.alternative_toolbar.gschema.xml
ui/: altabout.glade  altheaderbar.ui  altlibrary.ui  altmenubar.ui  altpreferences.glade  altpreferences.ui  alttoolbar.ui  alttoolbar.ui~  alttoolbar_flat.ui  buttonbox.css
